<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shubhra.homework1_group20.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/textBill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="258dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintBill"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="32dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="292dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginRight="16dp">

        <RadioButton
            android:id="@+id/rb10"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/rb10" />

        <RadioButton
            android:id="@+id/rb15"
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb20" />

        <RadioButton
            android:id="@+id/rb18"
            android:layout_width="27dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb18" />

        <RadioButton
            android:id="@+id/rb40"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbCustom" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="44dp"
        android:text="@string/tvTip"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tvCustom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp" />

    <SeekBar
        android:id="@+id/d"
        style="@android:style/Widget.DeviceDefault.Light.SeekBar"
        android:layout_width="251dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:max="@integer/maxSeek"
        android:progress="@integer/defaultSeek"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tvCustomTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/tvCustomTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/d"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="28dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/textTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:text="@string/tvTipdefault"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/d"
        android:layout_marginLeft="40dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/tvTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvTotaldefault"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginLeft="24dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="362dp"
        android:layout_height="46dp"
        android:layout_marginBottom="136dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnExit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.75" />

</android.support.constraint.ConstraintLayout>
